--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passcoder",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -10,6 +10,10 @@
   "bin": "./index.js",
   "keywords": [],
   "author": "amily400",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Amily404/PassCoder"
+  },
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.0.1",
