--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passcoder",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -19,6 +19,7 @@
     "chalk": "^5.0.1",
     "chalk-animation": "^2.0.2",
     "clipboardy": "^3.0.0",
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "yargs": "^17.4.1"
   }
 }
